Ver1.0.7 Change calendar script

--- a/time/calendar1/app/views/calendars/index.html.erb
+++ b/time/calendar1/app/views/calendars/index.html.erb
@@ -1,3 +1,7 @@
+<div id="month"></div>
 <div id="content"></div>
-<div id="content2"></div>
 
+<ul>
+	<li id="testLi">test_value</li>
+</ul>
+<input type="text" id="selected_day" name="selected_day" value="" readonly>
