Ver1.3.3 Devise ok

--- a/rails/devise1/app/views/layouts/application.html.erb
+++ b/rails/devise1/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
 				<% else %>
 					<%= link_to 'サインイン', new_user_registration_path %> |
 					<%= link_to 'ログイン', new_user_session_path %>
+					<%= link_to 'Sign in with Twitter', user_omniauth_authorize_path(:twitter) %>
 				<% end %>
 			</nav>
 		</header>
