--- a/rails/google_map2/app/views/map/index.html.erb
+++ b/rails/google_map2/app/views/map/index.html.erb
@@ -1,4 +1,4 @@
-<script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
+<script src="//maps.google.com/maps/api/js?v=3.13&amp;sensr=false&amp;libraries=geometry" type="text/javascript"></script>
 <script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
 
 <div style='width: 800px;'>
@@ -6,10 +6,14 @@
 </div>
 
 <script type="text/javascript">
-    handler = Gmaps.build('Google');
-    handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+
+	mapStyle = [{"featureType":"administrative.locality","elementType":"labels","stylers":[{"visibility":"on"},{"saturation":"-46"},{"lightness":"-37"},{"gamma":"6.00"},{"weight":"6.76"},{"color":"#d53535"}]},{"featureType":"administrative.locality","elementType":"labels.text.fill","stylers":[{"visibility":"on"},{"color":"#090808"}]},{"featureType":"administrative.locality","elementType":"labels.text.stroke","stylers":[{"visibility":"on"},{"weight":"0.01"},{"color":"#ffffff"}]},{"featureType":"landscape.natural","elementType":"geometry.fill","stylers":[{"visibility":"on"},{"color":"#6fab61"}]},{"featureType":"poi","elementType":"geometry.fill","stylers":[{"visibility":"on"},{"color":"#aaa7a2"},{"weight":"0.01"},{"saturation":"17"},{"lightness":"-20"},{"gamma":"1.45"}]},{"featureType":"road","elementType":"geometry","stylers":[{"lightness":100},{"visibility":"simplified"},{"hue":"#00ffdc"}]},{"featureType":"road","elementType":"labels","stylers":[{"visibility":"off"}]},{"featureType":"transit.line","elementType":"geometry","stylers":[{"visibility":"on"},{"lightness":700},{"hue":"#ff0000"}]},{"featureType":"water","elementType":"all","stylers":[{"color":"#7ebeb8"}]},{"featureType":"water","elementType":"labels","stylers":[{"visibility":"off"},{"weight":"1.43"}]}]
+	
+	handler = Gmaps.build('Google');
+	handler.buildMap({ provider: {mapTypeId: google.maps.MapTypeId.ROADMAP, styles: mapStyle}, internal: {id: 'map'}}, function(){
       markers = handler.addMarkers(<%=raw @hash.to_json %>);
       handler.bounds.extendWith(markers);
       handler.fitMapToBounds();
+			handler.getMap().setZoom(14)
     });
 </script>
