--- a/rails/google_map3/app/views/map/index.html.erb
+++ b/rails/google_map3/app/views/map/index.html.erb
@@ -1,7 +1,10 @@
+<script src="http://rawgithub.com/HPNeo/gmaps/master/gmaps.js"></script>
+
 <div style="width: 800px;">
 	<div id="map" style="width:800px; height:400px;"></div>
 </div>
 
 <script type="text/coffeescript">
-  loadScript()
+	initialize()
 </script>
+
