--- a/rails/google_map3/app/views/map/index.html.erb
+++ b/rails/google_map3/app/views/map/index.html.erb
@@ -1,3 +1,4 @@
+<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
 <script src="http://rawgithub.com/HPNeo/gmaps/master/gmaps.js"></script>
 
 <div style="width: 800px;">
