--- a/rails/google_map3/app/views/map/index.html.erb
+++ b/rails/google_map3/app/views/map/index.html.erb
@@ -1,6 +1,11 @@
 <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
 <script src="http://rawgithub.com/HPNeo/gmaps/master/gmaps.js"></script>
 
+<form method="post" id="geo_form">
+	<input type="text" id="address" name="address" value=""/>
+	<input type="submit" value="Search"/>
+</form>
+
 <div style="width: 800px;">
 	<div id="map" style="width:800px; height:400px;"></div>
 </div>
