--- a/html5/responsible/01/style.css
+++ b/html5/responsible/01/style.css
@@ -4,29 +4,36 @@ html, body{
 }
 
 body{
-  background: #192135;
+  background: #000;
   color: #CFE3EB;
-  font-family: Helvetica, sans-serif;
+  font-family: 'Play', sans-serif;
+  font-size: 100%;
 }
-@font-face{
-  font-family: mplus-1p-regular;
-  src: url('http://mplus-fonts.sourceforge.jp/webfonts/mplus-1p-regular.ttf')
-       format("truetype");
+
+header{
+  font-size: 4rem;
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  padding-top: 1rem;
 }
 
 a{
   text-decoration: none;
   color: #fff;
 }
-a:hover{text-decoration: underline;}
-a:visited{}
 
 #contents{
   margin: 0 auto;
   width: 70%;
-  height: 100%;
+  height: auto;
   max-width: 1200px;
-  background: #051015;
+  background: #000;
+  box-shadow: 0px 0px 10px #518AA3;
+  background-image: url("images/top.jpeg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 0 3rem;
 }
 
 .flex{
@@ -40,6 +47,37 @@ a:visited{}
   background: #0C465F;
   text-align: center;
   padding: 10px 0;
+  opacity: 0.5;
+}
+.flex li a{
+  display: block;
+}
+.flex li:hover{
+  opacity: 0.8;
+}
+
+#main{
+  margin-top: 25rem;
+  margin-bottom: 1rem;
+  height: 500px;
+}
+#main .left{
+  float: left;
+  width: 70%;
+  height: auto;
+  background: #0C465F;
+  opacity: 0.3;
+}
+#main .right{
+  float: right;
+  width: 29%;
+  height: auto;
+  margin-left: 1%;
+  background: #0C465F;
+  opacity: 0.3;
+}
+#main::after{
+  clear: both;
 }
 
 #footer{
@@ -48,4 +86,6 @@ a:visited{}
   bottom: 0;
   left: 0;
   text-align: center;
+  padding: 3px 0;
+  font-size: 0.8rem;
 }
