--- a/html5/responsible/01/style.css
+++ b/html5/responsible/01/style.css
@@ -8,12 +8,16 @@ body{
   color: #CFE3EB;
   font-family: 'Play', sans-serif;
   font-size: 100%;
+  background-image: url("images/main.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
 header{
-  font-size: 4rem;
+  font-size: 1rem;
   width: 100%;
-  text-align: center;
+  text-align: left;
   color: #fff;
   padding-top: 1rem;
 }
@@ -23,17 +27,18 @@ a{
   color: #fff;
 }
 
+#base{
+  background-color: rgba(0,0,0,0.6);
+  width: 100%;
+  height: 100%;
+}
+
 #contents{
   margin: 0 auto;
   width: 70%;
   height: auto;
   max-width: 1200px;
-  background: #000;
-  box-shadow: 0px 0px 10px #518AA3;
-  background-image: url("images/top.jpeg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: 0 3rem;
+  opacity: 1.0;
 }
 
 .flex{
@@ -44,7 +49,7 @@ a{
 .flex li{
   list-style: none;
   width: 20%;
-  background: #0C465F;
+  background: #000;
   text-align: center;
   padding: 10px 0;
   opacity: 0.5;
@@ -53,13 +58,26 @@ a{
   display: block;
 }
 .flex li:hover{
-  opacity: 0.8;
+  background: #175369;
+  opacity: 0.7;
 }
 
 #main{
-  margin-top: 25rem;
+  margin-top: 5rem;
   margin-bottom: 1rem;
   height: 500px;
+}
+#main .title{
+  font-size: 8rem;
+  text-align: center;
+}
+#main .title_sub{
+  font-size: 2rem;
+  font-family: 'Merriweather', serif;
+  margin: 3rem 0;
+}
+.earth_img{
+  width: 2rem;
 }
 #main .left{
   float: left;
@@ -76,13 +94,13 @@ a{
   background: #0C465F;
   opacity: 0.3;
 }
-#main::after{
+#main:after{
   clear: both;
 }
 
 #footer{
   width: 100%;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   text-align: center;
