--- a/html5/responsible/01/small.css
+++ b/html5/responsible/01/small.css
@@ -15,3 +15,17 @@
   margin-bottom: 1rem;
   height: 100%;
 }
+
+#main .contents{
+  display: block;
+  width: 100%;
+}
+#main .content{
+  float: none;
+  width: 100%;
+}
+
+/*************** image style ******************/
+.content_img{
+  width: 5rem;
+}
