--- a/html5/responsible/01/style.css
+++ b/html5/responsible/01/style.css
@@ -6,7 +6,7 @@ html, body{
 body{
   background: #000;
   color: #CFE3EB;
-  font-family: 'Play', sans-serif;
+  font-family: 'Play', Helvetica, sans-serif;
   font-size: 100%;
   background-image: url("images/main.jpg");
   background-size: cover;
@@ -41,6 +41,7 @@ a{
   opacity: 1.0;
 }
 
+/*************** navigation style ******************/
 .flex{
   width: 100%;
   padding: 0;
@@ -62,6 +63,7 @@ a{
   opacity: 0.7;
 }
 
+/*************** main style ******************/
 #main{
   margin-top: 5rem;
   margin-bottom: 1rem;
@@ -70,34 +72,51 @@ a{
 #main .title{
   font-size: 8rem;
   text-align: center;
+  color: #fff;
+}
+#main .title_style_big{
+  font-size: 7rem;
+}
+#main .title_style_small{
+  font-size: 6rem;
+}
+#main .title_img{
+  margin: 5% 0 0 0;
+  opacity: 0.8;
 }
 #main .title_sub{
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-family: 'Merriweather', serif;
-  margin: 3rem 0;
+  opacity: 0.6;
 }
-.earth_img{
-  width: 2rem;
+#main .earth_img{
+  width: 7rem;
 }
-#main .left{
+#main .title_button{
+  margin: 5%;
+}
+#main .sub_contents{
+  width: 100%;
+  text-align: center;
+  margin-top: 30%;
+  margin-bottom: 20%;
+}
+#main .contents{
+  display: inline-block;
+  width: 100%;
+}
+#main .content{
   float: left;
-  width: 70%;
+  width: 31%;
   height: auto;
-  background: #0C465F;
-  opacity: 0.3;
-}
-#main .right{
-  float: right;
-  width: 29%;
-  height: auto;
-  margin-left: 1%;
-  background: #0C465F;
-  opacity: 0.3;
+  margin: 0 1.1%;
+  opacity: 0.4;
 }
 #main:after{
   clear: both;
 }
 
+/*************** footer style ******************/
 #footer{
   width: 100%;
   position: fixed;
@@ -106,4 +125,34 @@ a{
   text-align: center;
   padding: 3px 0;
   font-size: 0.8rem;
+}
+
+/*************** button style ******************/
+.button_style{
+    display: table;
+    margin: 0 auto;
+}
+
+.button_style_big{
+  display: table-cell;
+  width: 12rem;
+  height: 2.5rem;
+  font-size: 1.2rem;
+  border: 1px solid #fff;
+  vertical-align: middle;
+  border-radius: 5px;
+}
+
+.button_style_big:hover{
+  background-color: rgba(44,117,144,0.6);
+}
+
+/*************** button style ******************/
+.content_title{
+  font-size: 1.2rem;
+}
+
+/*************** image style ******************/
+.content_img{
+  width: 5rem;
 }
