--- a/html5/responsible/01/css/style.css
+++ b/html5/responsible/01/css/style.css
@@ -8,7 +8,7 @@ body{
   color: #CFE3EB;
   font-family: 'Play', Helvetica, sans-serif;
   font-size: 100%;
-  background-image: url("images/main.jpg");
+  background-image: url("../images/main.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
