Ver1.9.4 Add load button function

--- a/html5/responsible/01/css/style.css
+++ b/html5/responsible/01/css/style.css
@@ -131,6 +131,7 @@ a{
 .button_style{
     display: table;
     margin: 0 auto;
+    text-align: center;
 }
 
 .button_style_big{
@@ -158,6 +159,10 @@ a{
 }
 
 /********************************* gallery **************************************/
+#gallery_items{
+  margin: 0;
+  padding: 0;
+}
 .gallery_item{
   list-style: none;
 }
