--- a/html5/responsible/02/css/style.css
+++ b/html5/responsible/02/css/style.css
@@ -1,1 +1,63 @@
+/* Body */
+html, body{
+  width: 100%;
+  height: 100%;
+}
+body{
+  background-image: url("../images/main.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
 
+/* Navigation */
+.flex{
+  width: 100%;
+  display: flex;
+  padding: 0;
+}
+.flex li{
+  list-style: none;
+  width: 20%;
+  background: skyblue;
+}
+.flex li:hover{
+  background: pink;
+}
+
+/* Image */
+.top_image{
+  width: 40%;
+  display: block;
+  margin: 0 auto;
+}
+
+/* Button */
+.details_link{
+  display: block;
+  margin: 0 auto;
+  width: 200px;
+  height: 40px;
+  line-height: 40px;
+  border: 1px solid #fff;
+  border-radius: 3px;
+  text-decoration: none;
+  text-align: center;
+  color: #fff;
+  transition: color 0.3s ease 0s;
+}
+.details_link:hover{
+  background: #fff;
+  color: #1e50a2;
+}
+
+
+/* Footer */
+footer{
+  text-align: center;
+}
+#footer{
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+}
